<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDE79C"
    android:backgroundTint="#FAEF89"
    android:visibility="visible"
    tools:context=".MainActivity"
    tools:visibility="visible">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/color_fondo"
        android:padding="10dp"
        android:textSize="25sp"
        android:text="@string/texto_display"
        android:textAlignment="textEnd"
        android:textColor="@color/color_textoBlaco"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="670dp"
        android:background="#FF0000"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="69dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginHorizontal="10sp"
            android:background="#34FF07"
            android:orientation="horizontal">
            <Button
                android:id="@+id/id_btn_7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/btn_tx_7"
                android:textSize="25sp"
                android:layout_margin="5sp"
                app:cornerRadius="10dp"
                android:layout_weight=".25"></Button>
            <Button
                android:id="@+id/id_btn_8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:textSize="25sp"
                android:layout_margin="5sp"
                app:cornerRadius="10dp"
                android:text="@string/btn_tx_8"></Button>
            <Button
                android:id="@+id/id_btn_9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/btn_txt_9"
                android:textSize="25sp"
                android:layout_margin="5sp"
                app:cornerRadius="10dp"
                android:layout_weight=".25"></Button>
            <Button
                android:id="@+id/id_btn_mas"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/btn_tx_mas"
                android:textSize="25sp"
                android:layout_margin="5sp"
                app:cornerRadius="10dp"
                android:layout_weight=".25"></Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginHorizontal="10sp"
            android:background="#08FD7A"
            android:orientation="horizontal">

            <Button
                android:id="@+id/id_btn_4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/btn_tx_4"
                android:textSize="25sp"
                android:layout_margin="5sp"
                app:cornerRadius="10dp"
                android:layout_weight=".25"></Button>
            <Button
                android:id="@+id/id_btn_5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:textSize="25sp"
                android:layout_margin="5sp"
                app:cornerRadius="10dp"
                android:text="@string/btn_tx_5"></Button>
            <Button
                android:id="@+id/id_btn_6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/btn_tx_6"
                android:textSize="25sp"
                android:layout_margin="5sp"
                app:cornerRadius="10dp"
                android:layout_weight=".25"></Button>
            <Button
                android:id="@+id/id_btn_menos"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/btn_tx_menos"
                android:textSize="25sp"
                android:layout_margin="5sp"
                app:cornerRadius="10dp"
                android:layout_weight=".25"></Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginHorizontal="10sp"
            android:background="#34FF09"
            android:orientation="horizontal">
            <Button
                android:id="@+id/id_btn_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/btn_tx_1"
                android:textSize="25sp"
                android:layout_margin="5sp"
                app:cornerRadius="10dp"
                android:layout_weight=".25"></Button>
            <Button
                android:id="@+id/id_btn_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:textSize="25sp"
                android:layout_margin="5sp"
                app:cornerRadius="10dp"
                android:text="@string/btn_tx_2"></Button>
            <Button
                android:id="@+id/id_btn_3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/btn_tx_3"
                android:textSize="25sp"
                android:layout_margin="5sp"
                app:cornerRadius="10dp"
                android:layout_weight=".25"></Button>
            <Button
                android:id="@+id/id_btn_division"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/btn_tx_division"
                android:textSize="25sp"
                android:layout_margin="5sp"
                app:cornerRadius="10dp"
                android:layout_weight=".25"></Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginHorizontal="10sp"
            android:background="#08FD7A"
            android:orientation="horizontal">
            <Button
                android:id="@+id/id_btn_0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="0"
                android:textSize="25sp"
                android:layout_margin="5sp"
                app:cornerRadius="10dp"
                android:layout_weight=".25"></Button>
            <Button
                android:id="@+id/id_btn_punto"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:textSize="25sp"
                android:layout_margin="5sp"
                app:cornerRadius="10dp"
                android:text="."></Button>
            <Button
                android:id="@+id/id_btn_producto"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="x"
                android:textSize="25sp"
                android:layout_margin="5sp"
                app:cornerRadius="10dp"
                android:layout_weight=".25"></Button>
            <Button
                android:id="@+id/id_btn_feliz"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="☻"
                android:textSize="25sp"
                android:layout_margin="5sp"
                app:cornerRadius="10dp"
                android:layout_weight=".25"></Button>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>